@@ -78,6 +78,8 @@
         directory.
       - Added :write !cmd and :write >>file.
       - Added :yank command.
+      - :delmarks, :marks and :qmarks now also accept ranges, same as
+        :delqmarks.
     * Improvements to :style and :highlight:
       - Added -agent flag to :style.
       - The -append flag now updates existing properties rather than
